--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap"
       rel="stylesheet"
     />
-    <script src="./scripts/app.ts" defer></script>
+    <script src="./scripts/app.ts" type="module" defer></script>
     <title>Calculator</title>
   </head>
   <body>
